# rust_lambda_dynamo

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/routes/: add.rs
