[package]
name = "rust_lambda_dynamo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.57.1"
aws-sdk-dynamodb = "0.36.0"
lambda_http = "0.8.2"
lambda_runtime = "0.8.3"
serde = "1.0.192"
serde_json = "1.0.108"
simple-error = "0.3.0"
tokio = "1.33.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

